Lab2/Code/syntax.output
Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | %empty

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt
    7       | Specifier FunDec SEMI
    8       | Specifier error SEMI

    9 ExtDecList: VarDec
   10           | VarDec COMMA ExtDecList

   11 Specifier: TYPE
   12          | StructSpecifier

   13 StructSpecifier: STRUCT OptTag LC DefList RC
   14                | STRUCT Tag

   15 OptTag: ID
   16       | %empty

   17 Tag: ID

   18 VarDec: ID
   19       | VarDec LB INT RB

   20 FunDec: ID LP VarList RP
   21       | ID LP RP
   22       | ID error RP

   23 VarList: ParamDec COMMA VarList
   24        | ParamDec

   25 ParamDec: Specifier VarDec

   26 CompSt: LC DefList StmtList RC
   27       | error RC

   28 StmtList: Stmt StmtList
   29         | %empty

   30 Stmt: Exp SEMI
   31     | CompSt
   32     | RETURN Exp SEMI
   33     | IF LP Exp RP Stmt
   34     | IF LP Exp RP Stmt ELSE Stmt
   35     | WHILE LP Exp RP Stmt
   36     | error SEMI
   37     | RETURN Exp error SEMI
   38     | IF LP error Stmt
   39     | IF error RP Stmt
   40     | IF LP error Stmt ELSE Stmt
   41     | IF error RP Stmt ELSE Stmt
   42     | WHILE error RP Stmt
   43     | WHILE LP error Stmt
   44     | Exp error SEMI

   45 DefList: Def DefList
   46        | %empty

   47 Def: Specifier DecList SEMI
   48    | Specifier error SEMI

   49 DecList: Dec
   50        | Dec COMMA DecList

   51 Dec: VarDec
   52    | VarDec ASSIGNOP Exp

   53 Exp: Exp ASSIGNOP Exp
   54    | Exp AND Exp
   55    | Exp OR Exp
   56    | Exp RELOP Exp
   57    | Exp PLUS Exp
   58    | Exp MINUS Exp
   59    | Exp STAR Exp
   60    | Exp DIV Exp
   61    | LP Exp RP
   62    | MINUS Exp
   63    | NOT Exp
   64    | ID LP Args RP
   65    | ID LP RP
   66    | Exp LB Exp RB
   67    | Exp DOT ID
   68    | ID
   69    | INT
   70    | FLOAT

   71 Args: Exp COMMA Args
   72     | Exp


Terminals, with rules where they appear

$end (0) 0
error (256) 8 22 27 36 37 38 39 40 41 42 43 44 48
SEMI (258) 4 5 7 8 30 32 36 37 44 47 48
COMMA (259) 10 23 50 71
LC (260) 13 26
RC (261) 13 26 27
ASSIGNOP (262) 52 53
OR (263) 55
AND (264) 54
RELOP (265) 56
PLUS (266) 57
MINUS (267) 58 62
STAR (268) 59
DIV (269) 60
UMINUS (270)
NOT (271) 63
LP (272) 20 21 33 34 35 38 40 43 61 64 65
RP (273) 20 21 22 33 34 35 39 41 42 61 64 65
LB (274) 19 66
RB (275) 19 66
DOT (276) 67
INT (277) 19 69
FLOAT (278) 70
TYPE (279) 11
STRUCT (280) 13 14
RETURN (281) 32 37
IF (282) 33 34 38 39 40 41
WHILE (283) 35 42 43
ID (284) 15 17 18 20 21 22 64 65 67 68
LOWER_THAN_ELSE (285)
ELSE (286) 34 40 41


Nonterminals, with rules where they appear

$accept (32)
    on left: 0
Program (33)
    on left: 1, on right: 0
ExtDefList (34)
    on left: 2 3, on right: 1 2
ExtDef (35)
    on left: 4 5 6 7 8, on right: 2
ExtDecList (36)
    on left: 9 10, on right: 4 10
Specifier (37)
    on left: 11 12, on right: 4 5 6 7 8 25 47 48
StructSpecifier (38)
    on left: 13 14, on right: 12
OptTag (39)
    on left: 15 16, on right: 13
Tag (40)
    on left: 17, on right: 14
VarDec (41)
    on left: 18 19, on right: 9 10 19 25 51 52
FunDec (42)
    on left: 20 21 22, on right: 6 7
VarList (43)
    on left: 23 24, on right: 20 23
ParamDec (44)
    on left: 25, on right: 23 24
CompSt (45)
    on left: 26 27, on right: 6 31
StmtList (46)
    on left: 28 29, on right: 26 28
Stmt (47)
    on left: 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44, on right:
    28 33 34 35 38 39 40 41 42 43
DefList (48)
    on left: 45 46, on right: 13 26 45
Def (49)
    on left: 47 48, on right: 45
DecList (50)
    on left: 49 50, on right: 47 50
Dec (51)
    on left: 51 52, on right: 49 50
Exp (52)
    on left: 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70,
    on right: 30 32 33 34 35 37 44 52 53 54 55 56 57 58 59 60 61 62
    63 66 67 71 72
Args (53)
    on left: 71 72, on right: 64 71


State 0

    0 $accept: . Program $end

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 3 (ExtDefList)

    Program          go to state 3
    ExtDefList       go to state 4
    ExtDef           go to state 5
    Specifier        go to state 6
    StructSpecifier  go to state 7


State 1

   11 Specifier: TYPE .

    $default  reduce using rule 11 (Specifier)


State 2

   13 StructSpecifier: STRUCT . OptTag LC DefList RC
   14                | STRUCT . Tag

    ID  shift, and go to state 8

    $default  reduce using rule 16 (OptTag)

    OptTag  go to state 9
    Tag     go to state 10


State 3

    0 $accept: Program . $end

    $end  shift, and go to state 11


State 4

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


State 5

    2 ExtDefList: ExtDef . ExtDefList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 3 (ExtDefList)

    ExtDefList       go to state 12
    ExtDef           go to state 5
    Specifier        go to state 6
    StructSpecifier  go to state 7


State 6

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . SEMI
    6       | Specifier . FunDec CompSt
    7       | Specifier . FunDec SEMI
    8       | Specifier . error SEMI

    error  shift, and go to state 13
    SEMI   shift, and go to state 14
    ID     shift, and go to state 15

    ExtDecList  go to state 16
    VarDec      go to state 17
    FunDec      go to state 18


State 7

   12 Specifier: StructSpecifier .

    $default  reduce using rule 12 (Specifier)


State 8

   15 OptTag: ID .
   17 Tag: ID .

    LC        reduce using rule 15 (OptTag)
    $default  reduce using rule 17 (Tag)


State 9

   13 StructSpecifier: STRUCT OptTag . LC DefList RC

    LC  shift, and go to state 19


State 10

   14 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 14 (StructSpecifier)


State 11

    0 $accept: Program $end .

    $default  accept


State 12

    2 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 2 (ExtDefList)


State 13

    8 ExtDef: Specifier error . SEMI

    SEMI  shift, and go to state 20


State 14

    5 ExtDef: Specifier SEMI .

    $default  reduce using rule 5 (ExtDef)


State 15

   18 VarDec: ID .
   20 FunDec: ID . LP VarList RP
   21       | ID . LP RP
   22       | ID . error RP

    error  shift, and go to state 21
    LP     shift, and go to state 22

    SEMI   reduce using rule 18 (VarDec)
    COMMA  reduce using rule 18 (VarDec)
    LB     reduce using rule 18 (VarDec)


State 16

    4 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 23


State 17

    9 ExtDecList: VarDec .
   10           | VarDec . COMMA ExtDecList
   19 VarDec: VarDec . LB INT RB

    COMMA  shift, and go to state 24
    LB     shift, and go to state 25

    $default  reduce using rule 9 (ExtDecList)


State 18

    6 ExtDef: Specifier FunDec . CompSt
    7       | Specifier FunDec . SEMI

    error  shift, and go to state 26
    SEMI   shift, and go to state 27
    LC     shift, and go to state 28

    CompSt  go to state 29


State 19

   13 StructSpecifier: STRUCT OptTag LC . DefList RC

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 46 (DefList)

    Specifier        go to state 30
    StructSpecifier  go to state 7
    DefList          go to state 31
    Def              go to state 32


State 20

    8 ExtDef: Specifier error SEMI .

    $default  reduce using rule 8 (ExtDef)


State 21

   22 FunDec: ID error . RP

    RP  shift, and go to state 33


State 22

   20 FunDec: ID LP . VarList RP
   21       | ID LP . RP

    RP      shift, and go to state 34
    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    Specifier        go to state 35
    StructSpecifier  go to state 7
    VarList          go to state 36
    ParamDec         go to state 37


State 23

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


State 24

   10 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 38

    ExtDecList  go to state 39
    VarDec      go to state 17


State 25

   19 VarDec: VarDec LB . INT RB

    INT  shift, and go to state 40


State 26

   27 CompSt: error . RC

    RC  shift, and go to state 41


State 27

    7 ExtDef: Specifier FunDec SEMI .

    $default  reduce using rule 7 (ExtDef)


State 28

   26 CompSt: LC . DefList StmtList RC

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 46 (DefList)

    Specifier        go to state 30
    StructSpecifier  go to state 7
    DefList          go to state 42
    Def              go to state 32


State 29

    6 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 6 (ExtDef)


State 30

   47 Def: Specifier . DecList SEMI
   48    | Specifier . error SEMI

    error  shift, and go to state 43
    ID     shift, and go to state 38

    VarDec   go to state 44
    DecList  go to state 45
    Dec      go to state 46


State 31

   13 StructSpecifier: STRUCT OptTag LC DefList . RC

    RC  shift, and go to state 47


State 32

   45 DefList: Def . DefList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 46 (DefList)

    Specifier        go to state 30
    StructSpecifier  go to state 7
    DefList          go to state 48
    Def              go to state 32


State 33

   22 FunDec: ID error RP .

    $default  reduce using rule 22 (FunDec)


State 34

   21 FunDec: ID LP RP .

    $default  reduce using rule 21 (FunDec)


State 35

   25 ParamDec: Specifier . VarDec

    ID  shift, and go to state 38

    VarDec  go to state 49


State 36

   20 FunDec: ID LP VarList . RP

    RP  shift, and go to state 50


State 37

   23 VarList: ParamDec . COMMA VarList
   24        | ParamDec .

    COMMA  shift, and go to state 51

    $default  reduce using rule 24 (VarList)


State 38

   18 VarDec: ID .

    $default  reduce using rule 18 (VarDec)


State 39

   10 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 10 (ExtDecList)


State 40

   19 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 52


State 41

   27 CompSt: error RC .

    $default  reduce using rule 27 (CompSt)


State 42

   26 CompSt: LC DefList . StmtList RC

    error   shift, and go to state 53
    LC      shift, and go to state 28
    MINUS   shift, and go to state 54
    NOT     shift, and go to state 55
    LP      shift, and go to state 56
    INT     shift, and go to state 57
    FLOAT   shift, and go to state 58
    RETURN  shift, and go to state 59
    IF      shift, and go to state 60
    WHILE   shift, and go to state 61
    ID      shift, and go to state 62

    RC  reduce using rule 29 (StmtList)

    CompSt    go to state 63
    StmtList  go to state 64
    Stmt      go to state 65
    Exp       go to state 66


State 43

   48 Def: Specifier error . SEMI

    SEMI  shift, and go to state 67


State 44

   19 VarDec: VarDec . LB INT RB
   51 Dec: VarDec .
   52    | VarDec . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 68
    LB        shift, and go to state 25

    $default  reduce using rule 51 (Dec)


State 45

   47 Def: Specifier DecList . SEMI

    SEMI  shift, and go to state 69


State 46

   49 DecList: Dec .
   50        | Dec . COMMA DecList

    COMMA  shift, and go to state 70

    $default  reduce using rule 49 (DecList)


State 47

   13 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 13 (StructSpecifier)


State 48

   45 DefList: Def DefList .

    $default  reduce using rule 45 (DefList)


State 49

   19 VarDec: VarDec . LB INT RB
   25 ParamDec: Specifier VarDec .

    LB  shift, and go to state 25

    $default  reduce using rule 25 (ParamDec)


State 50

   20 FunDec: ID LP VarList RP .

    $default  reduce using rule 20 (FunDec)


State 51

   23 VarList: ParamDec COMMA . VarList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    Specifier        go to state 35
    StructSpecifier  go to state 7
    VarList          go to state 71
    ParamDec         go to state 37


State 52

   19 VarDec: VarDec LB INT RB .

    $default  reduce using rule 19 (VarDec)


State 53

   27 CompSt: error . RC
   36 Stmt: error . SEMI

    SEMI  shift, and go to state 72
    RC    shift, and go to state 41


State 54

   62 Exp: MINUS . Exp

    MINUS  shift, and go to state 54
    NOT    shift, and go to state 55
    LP     shift, and go to state 56
    INT    shift, and go to state 57
    FLOAT  shift, and go to state 58
    ID     shift, and go to state 62

    Exp  go to state 73


State 55

   63 Exp: NOT . Exp

    MINUS  shift, and go to state 54
    NOT    shift, and go to state 55
    LP     shift, and go to state 56
    INT    shift, and go to state 57
    FLOAT  shift, and go to state 58
    ID     shift, and go to state 62

    Exp  go to state 74


State 56

   61 Exp: LP . Exp RP

    MINUS  shift, and go to state 54
    NOT    shift, and go to state 55
    LP     shift, and go to state 56
    INT    shift, and go to state 57
    FLOAT  shift, and go to state 58
    ID     shift, and go to state 62

    Exp  go to state 75


State 57

   69 Exp: INT .

    $default  reduce using rule 69 (Exp)


State 58

   70 Exp: FLOAT .

    $default  reduce using rule 70 (Exp)


State 59

   32 Stmt: RETURN . Exp SEMI
   37     | RETURN . Exp error SEMI

    MINUS  shift, and go to state 54
    NOT    shift, and go to state 55
    LP     shift, and go to state 56
    INT    shift, and go to state 57
    FLOAT  shift, and go to state 58
    ID     shift, and go to state 62

    Exp  go to state 76


State 60

   33 Stmt: IF . LP Exp RP Stmt
   34     | IF . LP Exp RP Stmt ELSE Stmt
   38     | IF . LP error Stmt
   39     | IF . error RP Stmt
   40     | IF . LP error Stmt ELSE Stmt
   41     | IF . error RP Stmt ELSE Stmt

    error  shift, and go to state 77
    LP     shift, and go to state 78


State 61

   35 Stmt: WHILE . LP Exp RP Stmt
   42     | WHILE . error RP Stmt
   43     | WHILE . LP error Stmt

    error  shift, and go to state 79
    LP     shift, and go to state 80


State 62

   64 Exp: ID . LP Args RP
   65    | ID . LP RP
   68    | ID .

    LP  shift, and go to state 81

    $default  reduce using rule 68 (Exp)


State 63

   31 Stmt: CompSt .

    $default  reduce using rule 31 (Stmt)


State 64

   26 CompSt: LC DefList StmtList . RC

    RC  shift, and go to state 82


State 65

   28 StmtList: Stmt . StmtList

    error   shift, and go to state 53
    LC      shift, and go to state 28
    MINUS   shift, and go to state 54
    NOT     shift, and go to state 55
    LP      shift, and go to state 56
    INT     shift, and go to state 57
    FLOAT   shift, and go to state 58
    RETURN  shift, and go to state 59
    IF      shift, and go to state 60
    WHILE   shift, and go to state 61
    ID      shift, and go to state 62

    RC  reduce using rule 29 (StmtList)

    CompSt    go to state 63
    StmtList  go to state 83
    Stmt      go to state 65
    Exp       go to state 66


State 66

   30 Stmt: Exp . SEMI
   44     | Exp . error SEMI
   53 Exp: Exp . ASSIGNOP Exp
   54    | Exp . AND Exp
   55    | Exp . OR Exp
   56    | Exp . RELOP Exp
   57    | Exp . PLUS Exp
   58    | Exp . MINUS Exp
   59    | Exp . STAR Exp
   60    | Exp . DIV Exp
   66    | Exp . LB Exp RB
   67    | Exp . DOT ID

    error     shift, and go to state 84
    SEMI      shift, and go to state 85
    ASSIGNOP  shift, and go to state 86
    OR        shift, and go to state 87
    AND       shift, and go to state 88
    RELOP     shift, and go to state 89
    PLUS      shift, and go to state 90
    MINUS     shift, and go to state 91
    STAR      shift, and go to state 92
    DIV       shift, and go to state 93
    LB        shift, and go to state 94
    DOT       shift, and go to state 95


State 67

   48 Def: Specifier error SEMI .

    $default  reduce using rule 48 (Def)


State 68

   52 Dec: VarDec ASSIGNOP . Exp

    MINUS  shift, and go to state 54
    NOT    shift, and go to state 55
    LP     shift, and go to state 56
    INT    shift, and go to state 57
    FLOAT  shift, and go to state 58
    ID     shift, and go to state 62

    Exp  go to state 96


State 69

   47 Def: Specifier DecList SEMI .

    $default  reduce using rule 47 (Def)


State 70

   50 DecList: Dec COMMA . DecList

    ID  shift, and go to state 38

    VarDec   go to state 44
    DecList  go to state 97
    Dec      go to state 46


State 71

   23 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 23 (VarList)


State 72

   36 Stmt: error SEMI .

    $default  reduce using rule 36 (Stmt)


State 73

   53 Exp: Exp . ASSIGNOP Exp
   54    | Exp . AND Exp
   55    | Exp . OR Exp
   56    | Exp . RELOP Exp
   57    | Exp . PLUS Exp
   58    | Exp . MINUS Exp
   59    | Exp . STAR Exp
   60    | Exp . DIV Exp
   62    | MINUS Exp .
   66    | Exp . LB Exp RB
   67    | Exp . DOT ID

    LB   shift, and go to state 94
    DOT  shift, and go to state 95

    $default  reduce using rule 62 (Exp)


State 74

   53 Exp: Exp . ASSIGNOP Exp
   54    | Exp . AND Exp
   55    | Exp . OR Exp
   56    | Exp . RELOP Exp
   57    | Exp . PLUS Exp
   58    | Exp . MINUS Exp
   59    | Exp . STAR Exp
   60    | Exp . DIV Exp
   63    | NOT Exp .
   66    | Exp . LB Exp RB
   67    | Exp . DOT ID

    LB   shift, and go to state 94
    DOT  shift, and go to state 95

    $default  reduce using rule 63 (Exp)


State 75

   53 Exp: Exp . ASSIGNOP Exp
   54    | Exp . AND Exp
   55    | Exp . OR Exp
   56    | Exp . RELOP Exp
   57    | Exp . PLUS Exp
   58    | Exp . MINUS Exp
   59    | Exp . STAR Exp
   60    | Exp . DIV Exp
   61    | LP Exp . RP
   66    | Exp . LB Exp RB
   67    | Exp . DOT ID

    ASSIGNOP  shift, and go to state 86
    OR        shift, and go to state 87
    AND       shift, and go to state 88
    RELOP     shift, and go to state 89
    PLUS      shift, and go to state 90
    MINUS     shift, and go to state 91
    STAR      shift, and go to state 92
    DIV       shift, and go to state 93
    RP        shift, and go to state 98
    LB        shift, and go to state 94
    DOT       shift, and go to state 95


State 76

   32 Stmt: RETURN Exp . SEMI
   37     | RETURN Exp . error SEMI
   53 Exp: Exp . ASSIGNOP Exp
   54    | Exp . AND Exp
   55    | Exp . OR Exp
   56    | Exp . RELOP Exp
   57    | Exp . PLUS Exp
   58    | Exp . MINUS Exp
   59    | Exp . STAR Exp
   60    | Exp . DIV Exp
   66    | Exp . LB Exp RB
   67    | Exp . DOT ID

    error     shift, and go to state 99
    SEMI      shift, and go to state 100
    ASSIGNOP  shift, and go to state 86
    OR        shift, and go to state 87
    AND       shift, and go to state 88
    RELOP     shift, and go to state 89
    PLUS      shift, and go to state 90
    MINUS     shift, and go to state 91
    STAR      shift, and go to state 92
    DIV       shift, and go to state 93
    LB        shift, and go to state 94
    DOT       shift, and go to state 95


State 77

   39 Stmt: IF error . RP Stmt
   41     | IF error . RP Stmt ELSE Stmt

    RP  shift, and go to state 101


State 78

   33 Stmt: IF LP . Exp RP Stmt
   34     | IF LP . Exp RP Stmt ELSE Stmt
   38     | IF LP . error Stmt
   40     | IF LP . error Stmt ELSE Stmt

    error  shift, and go to state 102
    MINUS  shift, and go to state 54
    NOT    shift, and go to state 55
    LP     shift, and go to state 56
    INT    shift, and go to state 57
    FLOAT  shift, and go to state 58
    ID     shift, and go to state 62

    Exp  go to state 103


State 79

   42 Stmt: WHILE error . RP Stmt

    RP  shift, and go to state 104


State 80

   35 Stmt: WHILE LP . Exp RP Stmt
   43     | WHILE LP . error Stmt

    error  shift, and go to state 105
    MINUS  shift, and go to state 54
    NOT    shift, and go to state 55
    LP     shift, and go to state 56
    INT    shift, and go to state 57
    FLOAT  shift, and go to state 58
    ID     shift, and go to state 62

    Exp  go to state 106


State 81

   64 Exp: ID LP . Args RP
   65    | ID LP . RP

    MINUS  shift, and go to state 54
    NOT    shift, and go to state 55
    LP     shift, and go to state 56
    RP     shift, and go to state 107
    INT    shift, and go to state 57
    FLOAT  shift, and go to state 58
    ID     shift, and go to state 62

    Exp   go to state 108
    Args  go to state 109


State 82

   26 CompSt: LC DefList StmtList RC .

    $default  reduce using rule 26 (CompSt)


State 83

   28 StmtList: Stmt StmtList .

    $default  reduce using rule 28 (StmtList)


State 84

   44 Stmt: Exp error . SEMI

    SEMI  shift, and go to state 110


State 85

   30 Stmt: Exp SEMI .

    $default  reduce using rule 30 (Stmt)


State 86

   53 Exp: Exp ASSIGNOP . Exp

    MINUS  shift, and go to state 54
    NOT    shift, and go to state 55
    LP     shift, and go to state 56
    INT    shift, and go to state 57
    FLOAT  shift, and go to state 58
    ID     shift, and go to state 62

    Exp  go to state 111


State 87

   55 Exp: Exp OR . Exp

    MINUS  shift, and go to state 54
    NOT    shift, and go to state 55
    LP     shift, and go to state 56
    INT    shift, and go to state 57
    FLOAT  shift, and go to state 58
    ID     shift, and go to state 62

    Exp  go to state 112


State 88

   54 Exp: Exp AND . Exp

    MINUS  shift, and go to state 54
    NOT    shift, and go to state 55
    LP     shift, and go to state 56
    INT    shift, and go to state 57
    FLOAT  shift, and go to state 58
    ID     shift, and go to state 62

    Exp  go to state 113


State 89

   56 Exp: Exp RELOP . Exp

    MINUS  shift, and go to state 54
    NOT    shift, and go to state 55
    LP     shift, and go to state 56
    INT    shift, and go to state 57
    FLOAT  shift, and go to state 58
    ID     shift, and go to state 62

    Exp  go to state 114


State 90

   57 Exp: Exp PLUS . Exp

    MINUS  shift, and go to state 54
    NOT    shift, and go to state 55
    LP     shift, and go to state 56
    INT    shift, and go to state 57
    FLOAT  shift, and go to state 58
    ID     shift, and go to state 62

    Exp  go to state 115


State 91

   58 Exp: Exp MINUS . Exp

    MINUS  shift, and go to state 54
    NOT    shift, and go to state 55
    LP     shift, and go to state 56
    INT    shift, and go to state 57
    FLOAT  shift, and go to state 58
    ID     shift, and go to state 62

    Exp  go to state 116


State 92

   59 Exp: Exp STAR . Exp

    MINUS  shift, and go to state 54
    NOT    shift, and go to state 55
    LP     shift, and go to state 56
    INT    shift, and go to state 57
    FLOAT  shift, and go to state 58
    ID     shift, and go to state 62

    Exp  go to state 117


State 93

   60 Exp: Exp DIV . Exp

    MINUS  shift, and go to state 54
    NOT    shift, and go to state 55
    LP     shift, and go to state 56
    INT    shift, and go to state 57
    FLOAT  shift, and go to state 58
    ID     shift, and go to state 62

    Exp  go to state 118


State 94

   66 Exp: Exp LB . Exp RB

    MINUS  shift, and go to state 54
    NOT    shift, and go to state 55
    LP     shift, and go to state 56
    INT    shift, and go to state 57
    FLOAT  shift, and go to state 58
    ID     shift, and go to state 62

    Exp  go to state 119


State 95

   67 Exp: Exp DOT . ID

    ID  shift, and go to state 120


State 96
